--- a/bookstore-client/src/components/BannerCards.css
+++ b/bookstore-client/src/components/BannerCards.css
@@ -1,6 +1,6 @@
 .banner .swiper {
-    width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 400px;
 }
 
 .banner .swiper-slide {
@@ -11,6 +11,13 @@
     font-size: 22px;
     font-weight: bold;
     color: #fff;
+    margin-right: 80px;
+    margin-left: -80px;
+    /* Set background size to cover and fix the image size */
+    background-size: contain;
+    background-repeat: round;
+    /* Set a fixed height for the slides */
+    height: 100%;
 }
 
 .banner .swiper-slide:nth-child(1n) {
